--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -134,6 +134,15 @@
                     <div id="listJoueur">
 
                     </div>
+                    <hr>
+                    <div class="insideboxcadre">
+                        <p class="insideboxtext">Dette Technique</p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtextdette" id="dettetech">  </p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="cadrebox"> </p>
+                    </div>
+                    <hr>
                     <div class="insideboxdetail">
                         <p class="insideboxtext"> N°Userstorie</p>
                         <p style="margin-left: 1% ;margin-right: 1%;">|</p>
@@ -170,14 +179,8 @@
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="cadrebox"> </p>
                     </div>
-                    <hr>
-                    <div class="insideboxcadre">
-                        <p class="insideboxtext">Dette Technique</p>
-                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="insideboxtextdette"> Dette Inexistante x3 </p>
-                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="cadrebox"> </p>
-                    </div>
+                    
+                    
 
                 </div>
             </div>
