--- a/Jeu/public/views/preparerJeuEtape3.html
+++ b/Jeu/public/views/preparerJeuEtape3.html
@@ -19,7 +19,7 @@
     <h1>PREPARER LE JEU</h1>
 
     <h2> 3 - Estimation des users stories</h2>
-    <p class="soustitre"> Ceci est un tirage automatique, vous pouvez le relancer en
+    <p class="soustitre"> Afficher le modele de carte en cliquant sur Afficher!!! Ceci est un tirage automatique, vous pouvez le relancer en
         cliquant sur ... ‘relancer’</p>
         <p class="soustitre"> cliquer sur les cartes selon l'ordre de priorité que vous avez décidé</p>
         <p class="soustitre" id="nombrecarteSelected">  </p>
@@ -60,7 +60,8 @@
         </div>
     </div>
     <div class="misenforme">
-        <button class="btn3">Relancer</button>
+        <button class="btn3" id="devoiler">Afficher</button>
+        <button class="btn3" id="plus">Relancer</button>
         <button class="btn2">Revenir</button>
     
         <button class="btn"> <a href="/etape4" data-link="/etape4"> Finaliser la
