--- a/Jeu/public/assets/css/etape4Jeu.css
+++ b/Jeu/public/assets/css/etape4Jeu.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     flex:1 ;
     width: 100%; 
+    /* flex-direction: column; */
 }
 
 .lists .list{
@@ -38,11 +39,14 @@ body {
 }
 .list-item{
     margin-left: 5%;
+    margin-right:5%;
 }
 
 .image{
-    width: 100%;
-    height: 33%;  
+    width: 50%;
+    height: 33%; 
+    margin-left:25%;
+    margin-right: 25%;
 }
 .titreCard{
     text-align: center;
@@ -55,6 +59,11 @@ body {
     width: 97%;
     margin-Right:5%;
    
+}
+.satutCard{
+    text-align: right;
+    font-size: 1.25em;
+    color:black;
 }
 .containerimg{
     margin-left: 1%; width:97%;height: 40%;
