ajout du backend sur userstories et administration relie le tout au front et traitement des data en consequencegit add .

--- a/Jeu/public/views/authentification.html
+++ b/Jeu/public/views/authentification.html
@@ -8,39 +8,29 @@
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/scrumble.css">
+    <link rel="stylesheet" href="../assets/css/compte.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
 
-    <section>
-        <div  class="cadreconnexion">
-            <h1> Inscrivez-vous </h1>
-            <form action="" method="post" id="form">
+<section>
+    <div class="cadreadmin">
+        <h1> Inscrivez-vous </h1>
+        <form action="" method="post" id="form">
+
+            <input type="text" id="nom" name="nom" placeholder="entrez votre nom">
+            <input type="text" id="mail" name="mail" placeholder="entrez votre email">
+            <input type="password" id="password" name="password" placeholder="entrer votre password">
+
+            <div style="display: flex;flex-direction: row; justify-content: center;">
+                <input type="reset" value="Annuler">
+                <input type="submit" value="Créer un compte">
+            </div>
+        </form>
+
+    </div>
+</section>
 
 
-                <input type="text" id="mail" name="mail" placeholder="entrez votre email">
 
-
-                <input type="password" id="password" name="password" placeholder="entrer votre password">
-              
-                    <select id="level" name="level" placeholder="entrer votre niveau">
-                        <option value=""> entrer votre niveau</option>
-                        <option value="néophyte">néophyte</option>
-                        <option value="débutant">debutant</option>
-                        <option value="intermédiaire">intermédiaire</option>
-                        <option value="bon">bon</option>
-                        <option value="expert">expert</option>
-                    </select>
-               
-                <div style="display: flex;flex-direction: row; justify-content: center;">
-                    <input type="reset" value="Annuler" >
-                    <input type="submit"  value="Créer un compte">
-                </div>
-            </form>
-
-        </div>
-    </section>
-  
-
-
-</html> 
+</html>
