--- a/Jeu/public/views/connexion.html
+++ b/Jeu/public/views/connexion.html
@@ -23,17 +23,11 @@
 
                 <input type="password" id="password" name="password" placeholder="entrer votre password">
               
-                    <select id="level" name="level" placeholder="entrer votre niveau">
-                        <option value=""> entrer votre niveau</option>
-                        <option value="néophyte">néophyte</option>
-                        <option value="débutant">debutant</option>
-                        <option value="intermédiaire">intermédiaire</option>
-                        <option value="expert">expert</option>
-                    </select>
+                 
                
                 <div style="display: flex;flex-direction: row; justify-content: center;">
-                    <input type="reset" value="Annuler" >
-                    <input type="submit"  value="Créer un compte">
+                    <input type="reset" value="Annuler">
+                    <input type="submit"  value="Connexion">
                 </div>
             </form>
 
