--- a/Jeu/public/assets/css/administrationregles.css
+++ b/Jeu/public/assets/css/administrationregles.css
@@ -5,6 +5,7 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    
   }
   th{
       background-color: #313439 ;
@@ -14,10 +15,14 @@ table {
     text-align: left;
     padding: 8px;
   }
-  
-  /* tr:nth-child(even) {
-    background-color: #dddddd;
-  } */
+  #reglecadre{
+    width:100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    margin-bottom: 2%;;
+  }
+
   .cadregestionjeu {
     width: 66%;
     margin-top: 2.5%;
@@ -30,6 +35,7 @@ table {
     padding-right: 5%;
     display: flex;
     flex-direction: column;
+    
   }
 .cadrecreateregles{
     margin-top:2%;
@@ -43,5 +49,16 @@ table {
     margin-top: 1%;
     border-radius: 50px;
     height: 5em;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
+}
+.edit{
+  background-color: #4CAF50;
+  padding: 10px 24px;
+}
+.delete{
+  background-color: #f44336;
+  padding: 10px 24px;
+}
+.positionbutton{
+  margin-left:33%;
 }
