--- a/Jeu/public/views/administration.html
+++ b/Jeu/public/views/administration.html
@@ -15,10 +15,14 @@
 
 <section>
     <h1> Administrer le jeu</h1>
-    <div class="cadregestionjeu" id="gestion" >
+    <div class="cadregestionjeu" id="gestion">
+        
+        <!-- <button class="btn3"> <a href="/regles" data-link="/regles"> voir les regles </a></button>
+       
+        <div>
         <button class="btn3"> <a href="/administrationregles" data-link="/administrationregles"> Gestion des regles </a></button>
         <button class="btn3"> <a href="/administrationuserstories" data-link="/administrationuserstories"> Gestion des userstories </a> </button>
-        <button class="btn3"> Gestion des faqs </button>
+        <button class="btn3"> Gestion des faqs </button></div> -->
     </div>
 </section>
 
