--- a/Jeu/public/views/administrationregles.html
+++ b/Jeu/public/views/administrationregles.html
@@ -20,69 +20,80 @@
         <h1 class="titre">liste des regles</h1>
        
  <button class="btnregles"> <a href="/createregles" data-link="/createregles">Creer une nouvelle regle</a> </button>
-        <table>
+       <div id="reglecadre">
+ <table>
           <tr>
             <th>id</th>
             <th>nom regles</th>
             <th>resumé</th>
             <th>video</th>
+            <th>image</th>
             <th>text</th>
             <th>Action</th>
           </tr>
           <tbody>
           <tr>
-            <td>Alfreds Futterkiste</td>
+            <td>1</td>
             <td>Maria Anders</td>
             <td>Germany</td>
             <td>Germany</td>
             <td>Germany</td>
-            <td> <button> Edit </button> <button> Delete</button> </td>
+            <td>Germany</td>
+            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
           </tr>
           <tr>
-            <td>Centro comercial Moctezuma</td>
+            <td>2</td>
             <td>Francisco Chang</td>
             <td>Mexico</td>
             <td>Germany</td>
             <td>Germany</td>
-            <td> <button> Edit </button> <button> Delete</button> </td>
+            <td>Germany</td>
+            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
           </tr>
           <tr>
-            <td>Ernst Handel</td>
+            <td>3</td>
             <td>Roland Mendel</td>
             <td>Austria</td>
             <td>Germany</td>
             <td>Germany</td>
-            <td> <button> Edit </button> <button> Delete</button> </td>
+            <td>Germany</td>
+            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
           </tr>
           <tr>
-            <td>Island Trading</td>
+            <td>4</td>
             <td>Helen Bennett</td>
             <td>UK</td>
             <td>Germany</td>
             <td>Germany</td>
-            <td> <button> Edit </button> <button> Delete</button> </td>
+            <td>Germany</td> 
+            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
           </tr>
           <tr>
-            <td>Laughing Bacchus Winecellars</td>
+            <td>5</td>
             <td>Yoshi Tannamuri</td>
             <td>Canada</td>
             <td>Germany</td>
-            <td>Germany</td>
-            <td> <button> Edit </button> <button> Delete</button> </td>
+            <td>Germany</td><td>Germany</td>
+            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
           </tr>
           <tr>
-            <td>Magazzini Alimentari Riuniti</td>
+            <td>6</td>
             <td>Giovanni Rovelli</td>
             <td>Italy</td>
             <td>Germany</td>
+            <td>Germany</td> 
             <td>Germany</td>
-            <td> <button> Edit </button> <button> Delete</button> </td>
+            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
           </tr>
         </tbody>
         </table>
+      </div>
     </div>
+    <div class="positionbutton">
+    <button class="btnregles"> <a href="/administration" data-link="/administration">précédent</a> </button></div>
 </section>
 
 
-
+<br>
+<div></div>
 </html>
