--- a/Jeu/public/views/createregles.html
+++ b/Jeu/public/views/createregles.html
@@ -14,38 +14,43 @@
 
 
 <section>
+    <div style="display:flex;flex-direction:row;">
+        <button class="btnregles"> <a href="/administrationregles" data-link="/administrationregles">gestion</a>
+        </button>
+        <p id="messageflash"> </p>
+    </div>
     <div class="cadreconnexion">
         <h1> Creer une regle de jeu: </h1>
-        <button class="btnregles"> <a href="/administrationregles" data-link="/administrationregles">gestion</a> </button>
-        <p id="messageflash"> </p>
-        <form action="http://localhost:3018/createregles" method="post" id="formcreateregles">
+        <div id="reglecadre">
 
-            
-            <input type="text" id="titre" name="titre" placeholder="entre le titre de l'article">
+            <form action="" method="post" id="formcreateregles">
 
-           
-            <input type="text" id="resume" name="resume" placeholder="entrer votre resume (max: 3lignes)">
-          
-            <textarea id="textarea" name="description" rows="4" cols="65"
-                placeholder="rentrer le descriptif de votre regle de jeu"> 
+
+                <input type="text" id="titre" name="titre" placeholder="entre le titre de l'article">
+
+
+                <input type="text" id="resume" name="resume" placeholder="entrer votre resume (max: 3lignes)">
+
+                <textarea id="textarea" name="description" rows="4" cols="65"
+                    placeholder="rentrer le descriptif de votre regle de jeu">
                 </textarea> <br>
-            <p class="repartitionVert">
-            <p class="repartition">
-                <label class="position">choisir une image:</label>
-                <input type="file" id="myFile" name="image">
-            </p><br>
-            <p class="repartition">
-                <label class="position">choisir une video :</label>
-                <input type="file" id="myVideo" name="video" placeholder="choisir une video"></p>
-            </p>
+                <p class="repartitionVert">
+                <p class="repartition">
+                    <label class="position">choisir une image:</label>
+                    <input type="file" id="myFile" name="image">
+                </p><br>
+                <p class="repartition">
+                    <label class="position">choisir une video :</label>
+                    <input type="file" id="myVideo" name="video" placeholder="choisir une video"></p>
+                </p>
 
-            <div style="display: flex;flex-direction: row; justify-content: center;">
-                <input type="reset" value="Annuler">
-                <input type="submit" value="Valider la regle" >
-                
-            </div>
-        </form>
+                <div style="display: flex;flex-direction: row; justify-content: center;">
+                    <input type="reset" value="Annuler">
+                    <input type="submit" value="Valider la regle">
 
+                </div>
+            </form>
+        </div>
     </div>
 </section>
 
