--- a/Jeu/public/views/regles.html
+++ b/Jeu/public/views/regles.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../assets/css/scrumble.css">
+    <link rel="stylesheet" href="../assets/css/regles.css">
     <!-- <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
      -->
