--- a/Jeu/public/views/adminuserstories.html
+++ b/Jeu/public/views/adminuserstories.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +20,7 @@
        
         <h1 class="titre">liste des userstories</h1>
        
- <button class="btnregles"> <a href="/createregles" data-link="/createregles">Creer de nouvelles userstories</a> </button>
+ <!-- <button class="btnregles"> <a href="/createregles" data-link="/createregles">Creer de nouvelles userstories</a> </button> -->
        <div id="reglecadre">
  <table>
           <tr>
