--- a/Jeu/public/assets/css/administrationregles.css
+++ b/Jeu/public/assets/css/administrationregles.css
@@ -1,10 +1,12 @@
 .titre{
     margin-bottom: 2%;
+    
 }
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    margin-top: 5%;
     
   }
   th{
@@ -14,20 +16,30 @@ table {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    font-size:0.9em;
+    width:10%
+  }
+  .tdcontenu{
+    font-size: 0.75em;
+  }
+  .tdimage{
+    font-size: 0.75em;
+    width:1em;
   }
   #reglecadre{
     width:100%;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
-    margin-bottom: 2%;;
+    overflow-y: hidden;
+    margin-bottom: 2%;
   }
 
   .cadregestionjeu {
-    width: 66%;
-    margin-top: 2.5%;
-    height: 30em;
-    margin-left: 15%;
+    width: 87%;
+    margin-top: 5%;
+    padding-top: 5%;
+    height: 25%;
+    margin-left: 1%;
     border-radius: 30px;
     margin-bottom: 1%;
     background-color: #475158;
@@ -35,6 +47,7 @@ table {
     padding-right: 5%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10%;
     
   }
 .cadrecreateregles{
@@ -61,4 +74,41 @@ table {
 }
 .positionbutton{
   margin-left:33%;
+}
+
+/* formulaire */
+#myform {
+  width: 100%;
+  height: 33em;
+}
+#myFile, #myVideo{
+  margin-left: 15%;
+}
+.repartitionVert {
+  display: flex;
+  flex-direction: column;
+}
+.position{
+    margin-left: 20%;
+}
+#textarea{margin-left: 20%;
+}
+#titre{
+ margin-top:0%;
+}
+#resume{
+  margin-top:-33%;
+}
+.btnregles{
+  background-color: #FAF5BC;
+  color: black;
+  margin-left: 0;
+  padding: 25px 75px;
+  margin-top: 1%;
+  border-radius: 50px;
+  height: 5em;
+  margin-bottom: 2%;
+}
+#reglecadre{
+  margin-top:-5%;
 }
