debut traitement de partie sur les userstories

--- a/Jeu/public/views/adminuserstories.html
+++ b/Jeu/public/views/adminuserstories.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,72 +14,34 @@
 
 
 <section>
-    <h1> Administrer les differents paquets de userstories</h1>
+
     <div class="cadregestionjeu">
-       
-        <h1 class="titre">liste des userstories</h1>
-       
- <!-- <button class="btnregles"> <a href="/createregles" data-link="/createregles">Creer de nouvelles userstories</a> </button> -->
-       <div id="reglecadre">
- <table>
-          <tr>
-            <th>id</th>
-            <th>nom paquet</th>
-            <th>configuration</th>
-            <th>Action</th>
-          </tr>
-          <tbody>
-          <tr>
-            <td>1</td>
-            <td>Maria Anders</td>
-            <td>Germany</td>
-            
-            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Francisco Chang</td>
-            <td>Mexico</td>
-            
-            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Roland Mendel</td>
-            <td>Austria</td>
-            
-            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Helen Bennett</td>
-            <td>UK</td>
-           
-            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Yoshi Tannamuri</td>
-            <td>Canada</td>
-           
-            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Giovanni Rovelli</td>
-            <td>Italy</td>
-            
-            <td> <button class="edit"> Edit </button> <button class="delete"> Delete</button> </td>
-          </tr>
-        </tbody>
-        </table>
-      </div>
+
+        <h1> Administrer les differentes userstories</h1>
+
+        <!-- <button class="btnregles"> <a href="/createregles" data-link="/createregles">Creer de nouvelles userstories</a> </button> -->
+        <div id="reglecadre">
+            <table>
+                <tr>
+                    <th>id</th>
+                    <th>userstories</th>
+                    <th>Action</th>
+                </tr>
+                <tbody id="contenutable">
+                    
+
+
+
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="positionbutton">
-    <button class="btnregles"> <a href="/administration" data-link="/administration">précédent</a> </button></div>
+        <button class="btnregles"> <a href="/administration" data-link="/administration">précédent</a> </button></div>
 </section>
 
 
 <br>
 <div></div>
+
 </html>
