--- a/Jeu/public/assets/css/administrationregles.css
+++ b/Jeu/public/assets/css/administrationregles.css
@@ -35,11 +35,11 @@ table {
   }
 
   .cadregestionjeu {
-    width: 87%;
-    margin-top: 5%;
-    padding-top: 5%;
-    height: 25%;
-    margin-left: 1%;
+    width: 75%;
+    margin-top: 0%;
+    padding-top: 2%;
+    height: 30%;
+    margin-left: 10%;
     border-radius: 30px;
     margin-bottom: 1%;
     background-color: #475158;
@@ -47,7 +47,8 @@ table {
     padding-right: 5%;
     display: flex;
     flex-direction: column;
-    margin-bottom: 10%;
+    margin-bottom: 2%;
+    padding-bottom: 2%;
     
   }
 .cadrecreateregles{
