--- a/Jeu/public/views/adminuserstories.html
+++ b/Jeu/public/views/adminuserstories.html
@@ -26,6 +26,8 @@
     
     
                     <input type="text" id="titre" name="titre" placeholder="entre le titre de l'article">
+                    <input type="text" id="taille" name="taille" placeholder="entre la taille de l'article">
+                    <input type="text" id="value" name="value" placeholder="entre la valeur de l'article">
                     <input  id="id" name="id" type="hidden" >
     
                     <textarea id="textarea" name="texte" rows="4" cols="65"
@@ -66,6 +68,7 @@
                     <th> image de la Userstorie</th>
                     <th> dposition de la Userstorie</th>
                     <th> Dependance de la Userstorie</th>
+                    <th> Taille et value</th>
                     <th>Action</th>
                 </tr>
                 <tbody id="contenutable">
